<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="00dp"
    android:paddingLeft="126dp"
    android:paddingRight="30dp"
    android:paddingTop="40dp">


    <TextView
        android:layout_width="1349dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/choosePinPass"
        android:ems="10"
        android:id="@+id/editText4"
        android:textSize="44dp"
        android:textColor="#FF0000"
        android:paddingTop="0dp"
        android:gravity="top">


    </TextView>

    <RadioGroup
        android:id="@+id/choicePinPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="50dp">



    <RadioButton
            android:id="@+id/radioPIN"
            android:layout_width="362dp"
            android:layout_height="100dp"
            android:background="#00000000"
            android:ems="10"
            android:textSize="35dp"
            android:text="@string/usePin"
            android:checked="true" />
        <TextView
            android:text="@string/pinText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:paddingLeft="0dp"
            android:textSize="20dp"
            android:textColor="#FFFFFF"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/radioPWD"
            android:layout_width="398dp"
            android:layout_height="100dp"
            android:background="#00000000"
            android:ems="10"
            android:textSize="35dp"
            android:text="@string/usePassword"
            android:checked="false" />

        <TextView
            android:text="@string/passwordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:paddingLeft="0dp"
            android:textSize="20dp"
            android:textColor="#FFFFFF"
            android:layout_weight="1" />

    </RadioGroup>

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.46"
        android:textSize="44dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/touch_here"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="26dp"
        android:textColor="#FF0000"
        android:layout_marginEnd="301dp"
        android:layout_below="@+id/choicePinPwd"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="60dp" />


</RelativeLayout>


