<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp">


    <TextView
        android:layout_width="1349dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/setLauncherText"
        android:ems="10"
        android:id="@+id/editText4"
        android:textSize="44dp"
        android:paddingTop="0dp"
        android:textColor="#0000CD"
        android:gravity="top"
        android:paddingLeft="120dp"
        android:layout_marginTop="2dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_weight="1">


    </TextView>

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="400sp"
        android:layout_height="105dp"
        android:text="@string/touch_here_space"
        android:textSize="40sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginEnd="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="92dp" />

    <RadioGroup
        android:id="@+id/chooseLauncher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:paddingTop="5dp"
        android:layout_below="@+id/editText4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="80dp">



        <RadioButton
            android:id="@+id/defaultLauncher"
            android:layout_width="925dp"
            android:layout_height="100dp"
            android:background="#00000000"
            android:ems="10"
            android:textSize="35dp"
            android:paddingBottom="0dp"
            android:text="@string/title_default_launcher"
            android:checked="true" />

        <TextView
            android:text="@string/title_default_launcher_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:paddingLeft="0dp"
            android:textSize="20dp"
            android:textColor="#FFFFFF"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/thirdPartyLauncher"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:paddingTop="0dp"
            android:background="#00000000"
            android:ems="10"
            android:textSize="35dp"
            android:text="@string/title_thirdparty_launcher"
            android:checked="false" />
        <TextView
            android:text="@string/title_thirdparty_launcher_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView1"
            android:paddingLeft="0dp"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />

    </RadioGroup>

</RelativeLayout>


