<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="16dp"
    android:paddingLeft="128dp"
    android:paddingRight="128dp"
    android:paddingTop="16dp"
    android:scrollbars="none"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/welcome_head_patient"
            android:textAllCaps="true"
            android:textSize="70dp" >

            <requestFocus />
        </EditText>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0" >

            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:clickable="false"
                android:ems="10"
                android:fadingEdge="horizontal"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="textMultiLine|textNoSuggestions"
                android:longClickable="false"
                android:text="@string/welcome_intro"
                android:textSize="30dp"
                android:typeface="normal" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0" >

            <CheckBox
                android:id="@+id/CheckBox01"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="true"
                android:clickable="false" />

            <EditText
                android:id="@+id/EditText01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:clickable="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="textMultiLine|textNoSuggestions"
                android:text="@string/choose_password"
                android:textSize="30dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0" >

            <CheckBox
                android:id="@+id/CheckBox02"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="true"
                android:clickable="false" />

            <EditText
                android:id="@+id/EditText02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:clickable="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="textMultiLine|textNoSuggestions"
                android:text="@string/home_screen"
                android:textSize="30dp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:text="@string/change_language"
                android:textSize="40sp"
                android:visibility="invisible" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent" 
                android:layout_weight="1" />
           
            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.46"
                android:text="@string/touch_here"
                android:textSize="40sp" 
                android:focusable="true"
                android:focusableInTouchMode="true"/>
           
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
